--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Termo</h1>
+        <h1>Passatempo</h1>
     </header>
     <main>
         <div id="game-board"></div>
